Ensure Tempo api proxy can be used for detail
